# SpikeFI

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
demo/: __init__.py  train_golden.py
demo/nets/: nmnist.py
examples/: basic.ipynb  basic.py  bitflip.ipynb  bitflip.py  optimizations.ipynb  optimizations.py  parametric.ipynb  parametric.py  requirements.txt  requirements_demo.txt  train_faulty.ipynb  train_faulty.py  train_golden.ipynb  train_golden.py  train_golden_slayer.py
examples/demo/: __init__.py  setup_gesture.py  setup_nmnist.py  utils.py
examples/demo/architectures/: __init__.py  gesture.py  nmnist.py
examples/demo/config/: gesture.yaml  nmnist.yaml
examples/demo/models/: gesture_net.pt  nmnist-lenet_net.pt  nmnist_cnn_net.pt
examples/demo/nets/: gesture.py  nmnist.py
examples/demo/utils/: __init__.py  data.py  gesture.py  nmnist.py
spikefi/: __init__.py  core.py  fault.py  models.py  visual.py
spikefi/utils/: __init__.py  io.py  layer.py  progress.py  quantization.py
