[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spikefi"
version = "1.2.0"
description = "An automated fault injection framework for deep spiking neural network applications"
authors = [
    { name = "Theofilos Spyrou", email = "Theofilos.Spyrou@gmail.com" }
]
dependencies = [
    "cycler>=0.12",
    "matplotlib>=3.7",
    "numpy~=1.26",
    "torch>=2.1",
    "tqdm>=4.67",
    "slayerSNN"
]
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

[tool.setuptools]
packages = ["spikefi", "spikefi.utils"]
